# OpenClawSwitch

./: .gitignore  README.md  claude.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/plans/: 2026-03-06-openclaw-switch-design.md  2026-03-06-openclaw-switch-plan.md
src/: App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: profile.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/services/: config_parser.rs  mod.rs  profile.rs
src/components/editor/: ProfileEditor.tsx  ProvidersTab.test.tsx  ProvidersTab.tsx
src/components/profiles/: ProfileList.test.tsx  ProfileList.tsx
src/hooks/: useProfiles.ts
src/lib/api/: profile.ts
src/lib/api/__tests__/: profile.test.ts
src/lib/query/: index.ts
